latest (2546 rev.)

+ Fixed: world: MonthOfMonstersAction, add check heroes and castles
+ Fixed: pocketpc: good luck animation
+ Fixed: battle: fixed bless + good luck, curse + bad luck
+ Fixed: battle: fixed attacker animation pause
+ Fixed: battle: wait order turn
+ Fixed: gui: marketplace dialog show splitter cursor
+ Fixed: music: ocean theme
+ Fixed: play battle music
+ Fixed: music: puzzle, victory, lose, artesian spring, nomad tents, tree house, demon cave, experience, skill, watch tower
+ Fixed: music: castle music when hero open/close dialog
+ Fixed: game: heroes attack to castle (with hero present)
+ Added: option: castle: allow recruits special/expansion heroes
+ Update: battle: Army::Dialog: added spell duration info
+ Update: QuickDialog for hero, disable show level for enemy hero
+ Fixed: hotseat: view AI move for all local players, unions: fixed maps view
+ Fixed: game: crash select maps, remove old save format support
+ Fixed: maps: RemoveJail, top cell object
+ Fixed: castle: neutral army present
+ Fixed: game: update QuickDialog view Castle::Army or Heroes::Army with Scoute Skill
+ Fixed: game: Game::CountScoute, add round values
+ Fixed: heroes: Heroes::GetFreeman, Heroes::isFreeman
+ Fixed: world: World::CheckKingdomLoss: for accumulate gold conditions
+ Fixed: ai: AI profiling,  Castle::RecruitAllMonster

Aug, 31, 2011 (2490 rev.)

+ Added: option: Artesian Springs have two separately visitable squares (h3 ver)"
+ Added: option: Higher Mage Guilds Regenerate More Spell Points/turn
+ Added: engine: external sprite load for tiles (xml)
+ Update: pot file
+ Update: heroes: add shipmaster marker to icons
+ Update: heroes: quick info: show luck/morale
+ Update: heroes: quick info: show level
+ Update: alternative fonts
+ Fixed: savefile: can not landing from boat to coast
+ Fixed: update objects WaterMill/WindMill/MagicGarde with hero present
+ Fixed: Heroes::ActionHeroes, Heroes::ActionCastle
+ Fixed: Weeks/Months Of messages and next_week